added babel-eslint parser

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,10 @@
 {
-    "env": {
-        "browser": true,
-        "es2020": true
-    },
-    "extends": [
-        "airbnb",
-        "prettier"
-    ],
-    "plugins": [
-        "react",
-        "prettier"
-    ],
-    "rules": {
-    }
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["react", "prettier"],
+  "rules": {},
+  "parser": "babel-eslint"
 }
